@@ -9,6 +9,12 @@
 	p_align_valid.
 	(copy_elf_program_header): Copy PT_NULL segments.
 
+2007-10-12  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* elfxx-mips.c (mips_elf_sort_hash_table_f): Handle forced
+	local symbols specially.
+	(mips_elf_set_global_got_offset): Skip forced local symbols.
+
 2007-09-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* opncls.c (find_separate_debug_file): Ensure bfd_set_error has
